# dbt-ncl-analytics

./: .coderabbit.yaml  .gitattributes  .gitignore  .sqlfluff  CHANGELOG.md  CONTRIBUTING.md  HOW_SOURCES_WORK.md  README.md  build_changed.ps1  current_staging_models.txt  dbt-ncl-analytics.code-workspace  dbt_project.yml  env.example  packages.yml  profiles.yml  profiles.yml.example  profiles.yml.template  pyproject.toml  requirements.txt  start_dbt.ps1  start_dbt.sh  tance Win32_Process  Where-Object { $_.CommandLine -match 'pattern' }  Select-Object ProcessId, CommandLine
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: pre-commit  pre-commit.ps1
.github/: RELEASE_PROCESS.md  release-please-config.json
.snowflake/: profiles.yml
analyses/: list_size_comparison_by_practice.sql  list_size_comparison_summary.sql  modelling_vs_dev_schema_comparison_metadata_only.sql  polypharmacy_exclusions_impact_analysis.sql  staging_vs_raw_row_counts.sql  valproate_patient_count.sql
docs/: dbt-fusion-guide.md  development-guide.md  github-actions.md  materialisation-guide.md  modelling-guide.md  snapshots-guide.md  what-is-dbt.md  working-with-sources.md
macros/: apply_snowflake_tag_if_tagged.sql  archive_indicator_definitions.sql  calculate_age_attributes.sql  calculate_school_age_flags.sql  check_source_columns.sql  clean_icd10_code.sql  clean_organisation_id.sql  clean_practice_name.sql  covid_campaign_config.sql  deduplicate_csds.sql  ensure_governance_tags.sql  extract_indicator_metadata.sql  flu_campaign_config.sql  flu_rule_components.sql  generate_database_name.sql  generate_history_table_comment.sql  generate_schema_name.sql  generate_table_comment.sql  get_latest_events.sql  get_ltc_lcs_medication_orders.sql  get_ltc_lcs_medication_orders_latest.sql  get_ltc_lcs_observations.sql  get_ltc_lcs_observations_latest.sql  get_medication_orders.sql  get_observations.sql  get_persons_subset.sql  get_persons_subset.yml  log_dbt_results.sql  log_row_count.sql  to_sql_list.sql  (+4 more)
snomed-mapping-validation/: .gitignore  PLAN.md  pyproject.toml
snomed-mapping-validation/config/: fhir.yaml  models.yaml
snomed-mapping-validation/src/: cli.py  data_prep.py
snomed-mapping-validation/src/embeddings/: embed.py  index.py  models.py  score.py
snomed-mapping-validation/src/utils/: fhir.py  snowflake.py
(+4485 files in other folders)
