[project]
name = "dbt-ncl-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core==1.9.4",
    "dbt-snowflake==1.9.1",
    "dotenv==0.9.9",
    "keyring==25.5.0",
    "pandas==2.3.1",
    "pyyaml==6.0.2",
    "ruamel-yaml>=0.19.1",
    "snowflake-snowpark-python[pandas]==1.35.0",
]
