[project]
name = "dbt-ncl-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dbt-core==1.10.15",
    "dbt-snowflake==1.10.7",
    "dotenv==0.9.9",
    "keyring==25.6.0",
    "pandas==2.3.3",
    "pyyaml==6.0.2",
    "ruamel-yaml>=0.18.0",
]
